--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
+* {
+  font-family: 'Orbitron', sans-serif;
+  color: #D0D7DF;
+}
+
+p {
+  font-family: 'Raleway', sans-serif;
+}
+
 html {
   background-color: black;
+}
+
+.credits {
+  font-family: 'Orbitron', sans-serif;
+  color: #D0D7DF;
+  font-size: 10px;
 }
 
 .App {
@@ -32,7 +47,7 @@ html {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  color: white;
+  color: #D0D7DF;
 }
 
 .App-link {
