Add basic styling to PlanetInfo component

--- a/src/PlanetInfo/planetInfo.css
+++ b/src/PlanetInfo/planetInfo.css
@@ -3,3 +3,13 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.planet-info-img {
+  width: 200px;
+  align-self: center;
+}
+
+.planet-info-list {
+  list-style: none;
+  padding: 0;
+}
