--- a/src/components/SortBox/SortBox.css
+++ b/src/components/SortBox/SortBox.css
@@ -2,6 +2,53 @@
   color: white
 }
 
-input[type="radio"] {
-  margin: 0 5px 0 20px;
+.sort-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+.sort-options {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 20px;
+}
+
+.sort-options input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.sort-options label {
+  display: flex;
+  margin: 5px;
+  padding: 10px;
+  border: 2px solid #288FDE;
+  border-radius: 5px;
+}
+
+.sort-options input[type="radio"]:checked + label {
+  background-color: #288FDE;
+  border-color: #D0D7DF;
+}
+
+.sort-options label:hover {
+  cursor: pointer;
+  background-color: #68CCD7;
+}
+
+.sort-options input[type="radio"]:focus + label {
+  border: 2px dashed #D0D7DF;
+}
+
+/* 
+Dark Blue: #71927
+Large Font/Accent Colors :
+Mid Blue: #288FDE
+Red: #F04528
+All Font/Accent Colors :
+Light Blue: #68CCD7
+Yellow: #F5AE45
+Light Gray: #D0D7DF */
