--- a/src/components/Planet/planet.css
+++ b/src/components/Planet/planet.css
@@ -14,3 +14,15 @@
 .planet-icon:hover {
   cursor: pointer;
 }
+
+@media only screen and (max-width: 850px) {
+  .planet-card {
+    width: 30%;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  .planet-card {
+    width: 600%;
+  }
+}
