--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,12 +2,18 @@
   background-color: #071927;
   width: 100%;
   display: flex;
-  align-items: flex-start;
   justify-content: flex-start;
+  align-items: center;
   color: #D0D7DF;
 }
 
 .giphy-embed {
   height: 320;
   border: 0;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: bold;
+  text-decoration: none;
 }
