--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,7 @@
 }
 
 .giphy-embed {
-  height: 320;
+  height: 180px;
   border: 0;
 }
 
@@ -16,4 +16,5 @@
   font-size: 2rem;
   font-weight: bold;
   text-decoration: none;
+  margin-left: 15px;
 }
