--- a/src/components/PlanetInfo/planetInfo.css
+++ b/src/components/PlanetInfo/planetInfo.css
@@ -43,7 +43,14 @@ Light Gray: #D0D7DF */
 }
 
 .planet-info-title {
-  font-size: 40px;
+  display: inline;
+  font-size: 2.5rem;
+  vertical-align: middle;
+}
+
+.planet-info-title__name {
+  font-size: 4rem;
+  margin-top: 15px;
 }
 
 .planet-info-img {
@@ -53,6 +60,9 @@ Light Gray: #D0D7DF */
 
 .info-icon {
   width: 50px;
+  display: inline;
+  vertical-align: middle;
+  padding: 20px;
 }
 
 .planet-info-box {
