--- a/src/components/SortBox/SortBox.css
+++ b/src/components/SortBox/SortBox.css
@@ -51,6 +51,9 @@
 
 @media only screen and (max-width: 850px) {
   .sort-options label {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     width: 20%;
     font-size: 15px;
   }
@@ -62,8 +65,11 @@
 
 @media only screen and (max-width: 580px) {
   .sort-options label {
-    width: 20%;
+    display: flex;
+    flex-direction: row;
     padding: 5px;
+    box-sizing: border-box;
+    width: 50%;
     font-size: 15px;
   }
 
@@ -74,11 +80,13 @@
   }
 
   .sort-icon {
-    display: none;
+    width: 25%;
+    margin: 2.5%;
   }
+
 }
 
-/* 
+/*
 Dark Blue: #71927
 Large Font/Accent Colors :
 Mid Blue: #288FDE
