--- a/src/components/PlanetInfo/planetInfo.css
+++ b/src/components/PlanetInfo/planetInfo.css
@@ -137,16 +137,30 @@ Light Gray: #D0D7DF */
 }
 
 /******* Gravity *******/
+.info-icon__gravity {
+  width: 100px;
+  margin-right: 20px;
+  vertical-align: bottom;
+  float: left;
+  display: block;
+}
+
+.planet-info-text__gravity {
+  line-height: 3rem;
+  text-align: left;
+}
+
 .gravity-input {
   cursor: pointer;
   padding: 8px 0;
   text-align: center;
   box-sizing: border-box;
   border: 5px solid black;
-  width: 10%;
+  border-radius: 5px;
+  width: 125px;
   margin: 0 5px;
-  color: black;
-  font-size: 19px;
+  color: #071927;
+  font-size: 1.5rem;
 }
 
 .gravity-input:hover {
@@ -163,6 +177,25 @@ Light Gray: #D0D7DF */
 /* Firefox */
 .gravity-input[type=number] {
   -moz-appearance: textfield;
+}
+
+.earth-pounds {
+  color: white;
+  font-size: 1.5rem;
+}
+
+.gravity-words {
+  color: #F5AE45; 
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.gravity-earth {
+  display: block;
+  color: #F5AE45; 
+  font-size: 2rem;
+  font-weight: bold;
+  padding-right: 10px;
 }
 
 
