--- a/src/components/SortBox/SortBox.css
+++ b/src/components/SortBox/SortBox.css
@@ -64,17 +64,22 @@
 }
 
 @media only screen and (max-width: 580px) {
+  .sort-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .sort-options label {
     display: flex;
     flex-direction: row;
     padding: 5px;
     box-sizing: border-box;
-    width: 50%;
+    width: 45%;
     font-size: 15px;
   }
 
   .sort-options {
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     align-items: center;
   }
