--- a/src/components/Planet/planet.css
+++ b/src/components/Planet/planet.css
@@ -50,6 +50,20 @@
 @media only screen and (max-width: 850px) {
   .planet-card {
     width: 30%;
+    padding: 10px;
+    border-radius: 35px;
+  }
+  #terre,
+  #neptune,
+  #uranus,
+  #mercure {
+    border: 2px solid #288FDE;
+  }
+  #venus,
+  #mars,
+  #jupiter,
+  #saturne {
+    border: 2px solid #F04528;
   }
 }
 
