--- a/src/components/PlanetInfo/planetInfo.css
+++ b/src/components/PlanetInfo/planetInfo.css
@@ -102,7 +102,7 @@ Light Gray: #D0D7DF */
 .mass-earth {
   display: block;
   color: #F04528;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   font-weight: bold;
 }
 
@@ -228,6 +228,32 @@ Light Gray: #D0D7DF */
   width: 100px;
   vertical-align: bottom;
   float: right;
+}
+
+.planet-info-text__distance {
+  text-align: right;
+}
+
+.distance-multiplier {
+  color: #F04528;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.distance-words {
+  display: block;
+  color: #F04528;
+  font-size: 1.75rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.distance-earth {
+  display: block;
+  color: #F04528;
+  font-size: 1.75rem;
+  font-weight: bold;
+  text-align: right;
 }
 
 /******* Moons *******/
