--- a/src/components/Planet/planet.css
+++ b/src/components/Planet/planet.css
@@ -1,5 +1,5 @@
 .planet-card-name, .planet-card-fact{
-  transition: color 1s
+  transition: color .5s
 }
 
 .planet-card {
@@ -17,10 +17,46 @@
   cursor: pointer;
 }
 
-.planet-icon:hover {
-  transform: scale(1.05);
-  transition: transform 1s ease-in-out;
+.Mercury-img:hover {
+  transform: scale(.80);
+  transition: transform .5s ease-in-out;
 }
+
+.Venus-img:hover {
+  transform: scale(.90);
+  transition: transform .5s ease-in-out;
+}
+
+.Earth-img:hover {
+  transform: scale(.95);
+  transition: transform .5s ease-in-out;
+}
+
+.Mars-img:hover {
+  transform: scale(.85);
+  transition: transform .5s ease-in-out;
+}
+
+.Jupiter-img:hover {
+  transform: scale(1.20);
+  transition: transform .5s ease-in-out;
+}
+
+.Saturn-img:hover {
+  transform: scale(1.15);
+  transition: transform .5s ease-in-out;
+}
+
+.Uranus-img:hover {
+  transform: scale(1.10);
+  transition: transform .5s ease-in-out;
+}
+
+.Neptune-img:hover {
+  transform: scale(1.05);
+  transition: transform .5s ease-in-out;
+}
+
 
 .planet-icon:hover ~ .Earth,
 .planet-icon:hover ~ .Neptune,
