--- a/src/components/PlanetInfo/planetInfo.css
+++ b/src/components/PlanetInfo/planetInfo.css
@@ -35,11 +35,12 @@ Light Gray: #D0D7DF */
   flex-direction: column;
   justify-content: space-evenly;
   width: 30%;
-  min-width: 300px;
+  min-width: 360px;
 }
 
 .planet-info-card {
   width: 100%;
+  margin: 20px 0;
 }
 
 .planet-info-card > h2 {
@@ -160,10 +161,10 @@ Light Gray: #D0D7DF */
   box-sizing: border-box;
   border: 5px solid black;
   border-radius: 5px;
-  width: 155px;
+  width: 200px;
   margin: 0 5px;
-  color: #071927;
-  font-size: 1.5rem;
+  color: black;
+  font-size: 2rem;
 }
 
 .gravity-input:hover {
@@ -183,8 +184,9 @@ Light Gray: #D0D7DF */
 }
 
 .earth-pounds {
-  color: white;
-  font-size: 1.5rem;
+  color: #F5AE45;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .gravity-words {
@@ -306,13 +308,12 @@ Light Gray: #D0D7DF */
 }
 
 /******* Media queries *******/
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1125px) {
   .planet-info-column {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     width: 60%;
-    /* min-width: 500px; */
   }
 }
 
