--- a/src/components/PlanetInfo/planetInfo.css
+++ b/src/components/PlanetInfo/planetInfo.css
@@ -1,4 +1,4 @@
-/* 
+/*
 Dark Blue: #071927
 Large Font/Accent Colors :
 Mid Blue: #288FDE
@@ -153,7 +153,7 @@ Light Gray: #D0D7DF */
   text-align: left;
 }
 
-.gravity-input {
+.input {
   background-color: #D0D7DF;
   cursor: pointer;
   padding: 8px 0;
@@ -167,19 +167,19 @@ Light Gray: #D0D7DF */
   font-size: 2rem;
 }
 
-.gravity-input:hover {
+.input:hover {
   border: 5px solid #288FDE;
 }
 
 /* Chrome, Safari, Edge, Opera */
-.gravity-input::-webkit-outer-spin-button,
-.gravity-input::-webkit-inner-spin-button {
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
 /* Firefox */
-.gravity-input[type=number] {
+.input[type=number] {
   -moz-appearance: textfield;
 }
 
@@ -190,14 +190,14 @@ Light Gray: #D0D7DF */
 }
 
 .gravity-words {
-  color: #F5AE45; 
+  color: #F5AE45;
   font-size: 2.5rem;
   font-weight: bold;
 }
 
 .gravity-earth {
   display: block;
-  color: #F5AE45; 
+  color: #F5AE45;
   font-size: 2rem;
   font-weight: bold;
   padding-right: 10px;
