--- a/src/components/PlanetInfo/planetInfo.css
+++ b/src/components/PlanetInfo/planetInfo.css
@@ -131,6 +131,10 @@ Light Gray: #D0D7DF */
   font-weight: bold;
 }
 
+.planet-info-text__length-of-year {
+  line-height: 2.5rem;
+}
+
 .length-of-year-earth {
   display: block;
   color: #68CCD7;
@@ -149,7 +153,7 @@ Light Gray: #D0D7DF */
 }
 
 .planet-info-text__gravity {
-  line-height: 3rem;
+  line-height: 2.5rem;
   text-align: left;
 }
 
@@ -209,23 +213,27 @@ Light Gray: #D0D7DF */
 }
 
 .diameter-multiplier {
-  color: #288FDE;
+  color: #F04528;
   font-size: 2.5rem;
   font-weight: bold;
 }
 
 .diameter-words {
-  color: #288FDE;
+  color: #F04528;
   font-size: 2rem;
   font-weight: bold;
 }
 
 .diameter-earth {
   display: block;
-  color: #288FDE;
+  color: #F04528;
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
+}
+
+.planet-info-text__diameter {
+  line-height: 2.5rem;
 }
 
 /******* Distance from sun *******/
@@ -240,14 +248,14 @@ Light Gray: #D0D7DF */
 }
 
 .distance-multiplier {
-  color: #F04528;
+  color:  #288FDE;
   font-size: 2.5rem;
   font-weight: bold;
 }
 
 .distance-words {
   display: block;
-  color: #F04528;
+  color: #288FDE;
   font-size: 1.75rem;
   font-weight: bold;
   text-align: center;
@@ -255,7 +263,7 @@ Light Gray: #D0D7DF */
 
 .distance-earth {
   display: block;
-  color: #F04528;
+  color: #288FDE;
   font-size: 1.75rem;
   font-weight: bold;
   text-align: right;
@@ -267,13 +275,13 @@ Light Gray: #D0D7DF */
 }
 
 .moon-count {
-  color: #288FDE;
+  color: #68CCD7;
   font-size: 2.5rem;
   font-weight: bold;
 }
 
 .moon-word {
-  color: #288FDE;
+  color: #68CCD7;
   font-size: 2rem;
   font-weight: bold;
 }
@@ -285,24 +293,25 @@ Light Gray: #D0D7DF */
 }
 
 .planet-info-text__length-of-day {
+  line-height: 2.5rem;
   text-align: right;
 }
 
 .length-of-day-multiplier {
-  color: #68CCD7;
+  color: #F5AE45;
   font-size: 2.5rem;
   font-weight: bold;
 }
 
 .length-of-day-words {
-  color: #68CCD7;
+  color:  #F5AE45;
   font-size: 1.75rem;
   font-weight: bold;
 }
 
 .length-of-day-earth {
   display: block;
-  color: #68CCD7;
+  color: #F5AE45;
   font-size: 1.75rem;
   font-weight: bold;
 }
